--- a/views/pedidos/form.ejs
+++ b/views/pedidos/form.ejs
@@ -1,74 +1,92 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Fazer Pedido</title>
-        <% include ../head %>
-    </head>
-    <body>
-        <% if(locals.status){ %>
-            <p class="alert alert-info"><%=status%></p>
-        <%}%>
+
+<head>
+    <title>Fazer Pedido</title>
+    <% include ../head %>
+</head>
+
+<body>
+    <% if(locals.status){ %>
+    <p class="alert alert-info"><%=status%></p>
+    <%}%>
         <div>
             <div class ="container min-container">
                 <% if(!pedido.id) { %>
-                  <h2 class="basic-title">Fazer Pedido</h2>
-                <%} else { %>
-                  <h2 class="basic-title">Alterar pedido</h2>
-                <% } %>
-                
-                <% if(!pedido.id) { %>
-                <form action="/pedidos" method="post" class="well" role="form">
-                <%} else { %>
-                <form action="/pedidos/<%=pedido.id%>?_method=PUT" method="post" class="well" role="form">
-                <% } %>
-                    <div class="form-group">
-                        <label for="titulo">Nome</label>
-                        <div class="input-group">
-                            <input type="text" name="cliente" placeholder="Seu nome" value="<%=pedido.cliente%>" size="80"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="telefone">Telefone</label>
-                        <div class="input-group">
-                            <input type="text" name="telefone" placeholder="Seu telefone" value="<%=pedido.telefone%>" minlength="9" maxlength="9" size="80"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="endereco">Endereço</label>
-                        <div class="input-group">
-                            <input type="text" name="endereco" placeholder="Seu endereco" value="<%=pedido.endereco%>" size="80"/>
-                        </div>
-                        <label for="endereco">Exemplo: Vila Brasil, Rua Antonio Mendes 1900</label>
-                    </div>
-                    <div class="form-group">
-                        <label for="cpf">CPF</label>
-                        <div class="input-group">
-                            <input type="text" name="cpf" placeholder="Seu CPF" value="<%=pedido.cpf%>" minlength="11" maxlength="11" size="80"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="pedido">O que deseja?</label>
-                        <div class="input-group">
-                            <input type="text" name="pedido" placeholder="Seu pedido" value="<%=pedido.pedido%>" size="80"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-group">
-                            <input type="hidden" name="status" value="Pedido Realizado"/>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Salvar</button>
-                </form>
-                <div class="errors">
-                    <%if(locals.erros){%>
-                    <ul style="list-style-type: none; padding: 0px;">
-                        <% erros.forEach((erro) => {%>
-                        <li class="alert alert-danger" style="padding: 0.5em;"><%= erro.msg %></li>
-                        <%})}%>
-                    </ul>
+    <h2 class="basic-title">Fazer Pedido</h2>
+    <%} else { %>
+    <h2 class="basic-title">Alterar pedido</h2>
+    <% } %>
+
+    <% if(!pedido.id) { %>
+    <form action="/pedidos" method="post" class="well" role="form">
+        <%} else { %>
+        <form action="/pedidos/<%=pedido.id%>?_method=PUT" method="post" class="well" role="form">
+            <% } %>
+            <div class="form-group">
+                <label for="titulo">Nome</label>
+                <div class="input-group">
+                    <input type="text" name="cliente" placeholder="Seu nome" value="<%=pedido.cliente%>" size="80" />
                 </div>
-                
             </div>
+            <div class="form-group">
+                <label for="telefone">Telefone</label>
+                <div class="input-group">
+                    <input type="text" name="telefone" placeholder="Seu telefone" value="<%=pedido.telefone%>"
+                        minlength="9" maxlength="9" size="80" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="endereco">Endereço</label>
+                <div class="input-group">
+                    <input type="text" name="endereco" placeholder="Seu endereco" value="<%=pedido.endereco%>"
+                        size="80" />
+                </div>
+                <label for="endereco">Exemplo: Vila Brasil, Rua Antonio Mendes 1900</label>
+            </div>
+            <div class="form-group">
+                <label for="cpf">CPF</label>
+                <div class="input-group">
+                    <input type="text" name="cpf" placeholder="Seu CPF" value="<%=pedido.cpf%>" minlength="11"
+                        maxlength="11" size="80" />
+                </div>
+            </div>
+            <table class="table table-bordered">
+                <div id="itensCardapio">
+                    <% cardapio.forEach((item) => { %>
+                    <div id="blocoItem">
+                        <p id="infoItem" ><%= item.nome %></p>
+                        <img src="<%= item.imgUrl %>" id="itemImg"> <br>
+                        <p id="itemPreco">R$ <%= item.preco %></p> <br>
+                        <p id="itemStatus"> <%= item.descricao %></p>
+                    </div>
+                    <% }) %>
+                </div>
+            </table>
+            <div class="form-group">
+                <label for="pedido">O que deseja?</label>
+                <div class="input-group">
+                    <input type="text" name="pedido" placeholder="Seu pedido" value="<%=pedido.pedido%>" size="80" />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <input type="hidden" name="status" value="Pedido Realizado" />
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Fazer Pedido</button>
+        </form>
+        <div class="errors">
+            <%if(locals.erros){%>
+            <ul style="list-style-type: none; padding: 0px;">
+                <% erros.forEach((erro) => {%>
+                <li class="alert alert-danger" style="padding: 0.5em;"><%= erro.msg %></li>
+                <%})}%>
+            </ul>
         </div>
-    </body>
-</html>    
+
+        </div>
+        </div>
+</body>
+
+</html>
