--- a/views/site/dashboard.ejs
+++ b/views/site/dashboard.ejs
@@ -5,15 +5,13 @@
     <% include ../head %>
   </head>
   <body>
-    <div id="divisao">
-      TEXTE
-      <br><br>
-      <a id="dinossauro" href="/cardapio">Cardapio</a>
-      <br><br>
+    
+      <a href="/cardapio">Cardápio</a>
+
       <a href="/pedidos">Pedidos</a>
-      <br><br>
-      <a href="/login">Login</a>
-    </div>
+      
+      <a href="/login/novo">Login</a>
+
   </body>
   <footer>
 
