--- a/views/cardapio/informacao.ejs
+++ b/views/cardapio/informacao.ejs
@@ -4,6 +4,8 @@
 <head>
     <title>Informações</title>
     <% include ../head %>
+
+    <a href="/cardapio" id="backButton"> ↩ Voltar</a>
 </head>
 
 <body>
