--- a/views/pedidos/form.ejs
+++ b/views/pedidos/form.ejs
@@ -4,6 +4,8 @@
 <head>
     <title>Fazer Pedido</title>
     <% include ../head %>
+
+    <a href="/pedidos" id="backButton"> ↩ Voltar</a>
 </head>
 
 <body>
