--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,6 +4,8 @@
 <head>
     <title>Acesso ao Sistema</title>
     <% include ../head %>
+
+    <a href="/" id="backButton"> ↩ Voltar</a>
 </head>
 
 <body>
@@ -13,7 +15,7 @@
 
     <div class="container min-container">
         <div class="col-sm-6 col-sm-offset-3">
-            <h2 class="basic-title">Cadastrar-se</h2>
+            <h2 class="basic-title">Acesso a Sistemas</h2>
 
     </div>
     <% if(!user.id) { %>
