--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -12,6 +12,8 @@
       <br><br>
       <a href="/pedidos">Pedidos</a>
       <br><br>
+      <a href="/feed">Feed</a>
+      <br><br>
       <a href="/login">Login</a>
     </div>
   </body>
